Reformatted Delta.py for consistency and ease of use

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -15,20 +15,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-27T13:46:32.140847500Z",
-     "start_time": "2024-02-27T13:46:32.126196600Z"
+     "end_time": "2024-02-27T14:53:15.882322600Z",
+     "start_time": "2024-02-27T14:53:15.867776100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[None]\n"
+     ]
+    }
+   ],
    "source": [
     "from src.vardelta.Delta import Delta\n",
     "\n",
-    "value: Delta = Delta(1)"
+    "my_value: Delta = Delta(1)\n",
+    "\n",
+    "print(my_value.values)\n",
+    "print(my_value.changes)"
    ]
   },
   {
@@ -53,29 +65,40 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "4\n"
+      "4\n",
+      "1\n",
+      "0.0\n",
+      "[1, 5]\n",
+      "[None, 4]\n"
      ]
     }
    ],
    "source": [
     "# This will change the value to 5.\n",
-    "value.change_value(5)\n",
+    "my_value.change_value(5)\n",
     "\n",
     "# To confirm it worked, we can print the variable.\n",
-    "print(value.get_value())\n",
+    "print(my_value.get_value())\n",
     "\n",
     "# We can also see how much it changed!\n",
-    "print(value.get_change())"
+    "print(my_value.get_change())\n",
+    "\n",
+    "# Alternatively, you can use .value and .change to get the latest value and latest change.\n",
+    "print(my_value.value)\n",
+    "print(my_value.change)\n",
+    "\n",
+    "print(my_value.values)\n",
+    "print(my_value.changes)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-27T13:46:32.163070600Z",
-     "start_time": "2024-02-27T13:46:32.143845400Z"
+     "end_time": "2024-02-27T14:52:49.123037700Z",
+     "start_time": "2024-02-27T14:52:49.070642800Z"
     }
    },
    "id": "1ba3538d4a5b57f1",
-   "execution_count": 21
+   "execution_count": 91
   },
   {
    "cell_type": "markdown",
@@ -105,26 +128,26 @@
    ],
    "source": [
     "# Changing the variable to add some history to select from.\n",
-    "value.change_value(10)\n",
-    "value.change_value(7)\n",
-    "value.change_value(2_000)\n",
-    "value.change_value(45)\n",
+    "my_value.change_value(10)\n",
+    "my_value.change_value(7)\n",
+    "my_value.change_value(2_000)\n",
+    "my_value.change_value(45)\n",
     "\n",
     "# Will print the value as it was two changes ago, or \"7\".\n",
-    "print(value.get_value(2))\n",
+    "print(my_value.get_value(2))\n",
     "\n",
     "# Will print the value as it was when we first created it, or \"1\".\n",
-    "print(value.get_value(5))"
+    "print(my_value.get_value(5))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-27T13:46:32.205426Z",
-     "start_time": "2024-02-27T13:46:32.166851600Z"
+     "end_time": "2024-02-27T14:52:49.125043500Z",
+     "start_time": "2024-02-27T14:52:49.077670700Z"
     }
    },
    "id": "fb4ea6a9ca1677b1",
-   "execution_count": 22
+   "execution_count": 92
   },
   {
    "cell_type": "markdown",
@@ -154,19 +177,19 @@
    ],
    "source": [
     "# This will both print the first value, currently.\n",
-    "print(value.get_value(-1))\n",
+    "print(my_value.get_value(-1))\n",
     "# If you were to add a new value before the line below this comment ran, it would not print the same value as the line above this comment does.\n",
-    "print(value.get_value(5))"
+    "print(my_value.get_value(5))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-27T13:46:32.205426Z",
-     "start_time": "2024-02-27T13:46:32.170868500Z"
+     "end_time": "2024-02-27T14:52:49.126554Z",
+     "start_time": "2024-02-27T14:52:49.084649200Z"
     }
    },
    "id": "2876a0b9cb74a33e",
-   "execution_count": 23
+   "execution_count": 93
   }
  ],
  "metadata": {
